k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudops-pipeline-service
  namespace: cloudops
spec:
  type: LoadBalancer
  selector:
    app: cloudops-pipeline
  ports:
    - name: http
      port: 80
      targetPort: 3000
